# Algorand-Web3-Masterclasses-POC

AlgoRewards/: .algokit.toml  ADMIN_SESSION_GUIDE.md  ATTENDANCE_CODE_SYSTEM.md  AlgoRewards.code-workspace  DARK_THEME_FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  LAYOUT_FIXES_SUMMARY.md  MULTI_SESSION_SUMMARY.md  PHASE3_SUMMARY.md  PRODUCTION_README.md  PROJECT_SCOPE.md  PROJECT_STATUS_REPORT.md  README.md  SESSION3_MVP_README.md  SESSION3_MVP_SUMMARY.md  TECHNICAL_SUMMARY.md  VALIDATION_GUIDE.md  create_simple_test_nft.py  debug_account_assets.py  deploy_production.py  production_nft_minter.py  (+1 more)
AlgoRewards/projects/AlgoRewards-contracts/: .algokit.toml  PHASE3_README.md  PHASE4_EXPLANATION.md  README.md  TESTING_GUIDE.md  create_session.py  generate_wallet.py  ipfs_utils.py  my_session_manager.py  pyproject.toml
AlgoRewards/projects/AlgoRewards-contracts/.algokit/: .copier-answers.yml
AlgoRewards/projects/AlgoRewards-contracts/archive/debug_scripts/: create_real_nft.py  create_real_nft_simple.py  create_real_nft_working.py  create_true_nft.py  create_wallet_friendly_nft.py  debug_nft_issue.py  deploy_phase3.py  integrated_nft_system.py  opt_in_to_nft.py  quick_test.py  run_tests.py  test_phase3.py  validate_true_nft.py
AlgoRewards/projects/AlgoRewards-contracts/smart_contracts/algo_rewards_contract/: contract.py  deploy_config.py
AlgoRewards/projects/AlgoRewards-contracts/smart_contracts/artifacts/algo_rewards_contract/: AlgoRewardsContract.approval.puya.map  AlgoRewardsContract.approval.teal  AlgoRewardsContract.arc56.json  algo_rewards_contract_client.py
(+24 files in other folders)
